--- a/analytics-ui/src/styles/layouts/global.less
+++ b/analytics-ui/src/styles/layouts/global.less
@@ -1,9 +1,12 @@
 @import '../rust-theme.less';
+// // Import Montserrat font
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
 :root {
   .make-color-variables();
   --disabled: @disabled-color;
-  --font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  --font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    Roboto, 'Helvetica Neue', Arial, sans-serif;
 }
 
 body {
