--- a/analytics-ui/src/styles/components/button.less
+++ b/analytics-ui/src/styles/components/button.less
@@ -1,3 +1,7 @@
+.ant-btn {
+  border-radius: 8px !important;
+}
+
 .adm-btn-no-style {
   cursor: pointer;
   background: transparent;
@@ -30,7 +34,8 @@
   font-family: var(--font-family);
   font-weight: 500;
   transition: all 0.2s ease;
-  &:hover,&:focus {
+  &:hover,
+  &:focus {
     background-color: @rust-orange-2;
     border-color: @rust-orange-5;
     color: @rust-orange-7;
