--- a/analytics-ui/src/styles/utilities/border.less
+++ b/analytics-ui/src/styles/utilities/border.less
@@ -20,8 +20,36 @@
   }
 }
 
+.rounded-xs {
+  border-radius: 2px !important;
+}
+
 .rounded {
   border-radius: 4px !important;
+}
+
+.rounded-md {
+  border-radius: 6px !important;
+}
+
+.rounded-lg {
+  border-radius: 8px !important;
+}
+
+.rounded-xl {
+  border-radius: 12px !important;
+}
+
+.rounded-2xl {
+  border-radius: 16px !important;
+}
+
+.rounded-3xl {
+  border-radius: 24px !important;
+}
+
+.rounded-4xl {
+  border-radius: 32px !important;
 }
 
 .rounded-pill {
