--- a/analytics-ui/src/styles/utilities/text.less
+++ b/analytics-ui/src/styles/utilities/text.less
@@ -5,6 +5,7 @@
     sm: @font-size-sm;
     md: @font-size-lg;
     lg: @font-size-lg + 2px;
+    xl: @font-size-lg + 4px;
   };
   each(@preset-text, {
     .text-@{key} {
