--- a/analytics-ui/src/styles/components/table.less
+++ b/analytics-ui/src/styles/components/table.less
@@ -1,10 +1,9 @@
 // override antd styles
 .ant-table {
   border: 1px @gray-4 solid;
-  border-radius: 20px;
+  border-radius: 8px;
   overflow: hidden;
   font-family: var(--font-family);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
 
   .ant-table-row:last-child .ant-table-cell {
     border-bottom: none;
@@ -22,37 +21,34 @@
 
   .ant-table-expanded-row {
     > .ant-table-cell {
-      background-color: @rust-orange-1;
+      background-color: @gray-2;
     }
   }
 
-  .ant-table-thead > tr > th {
-    background: @rust-orange-1;
-    color: @rust-orange-8;
-    font-weight: 600;
-    border-bottom: 2px solid @rust-orange-3;
-  }
+  // .ant-table-thead > tr > th {
+  //   background: @rust-orange-1;
+  //   color: @rust-orange-8;
+  // }
 
   .ant-table-tbody > tr.ant-table-row:hover > td,
   .ant-table-tbody > tr > td.ant-table-cell-row-hover {
-    background: @rust-orange-1;
+    background: @gray-2;
   }
 
   .adm-nested-table {
     .ant-table {
       border: none;
-      border-radius: 12px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+      border-radius: 8px;
 
       .ant-table-thead > tr > th {
-        background: @rust-orange-2;
-        color: @rust-orange-8;
+        background: @gray-2;
+        color: @gray-8;
         font-weight: 600;
       }
 
       .ant-table-tbody > tr.ant-table-row:hover > td,
       .ant-table-tbody > tr > td.ant-table-cell-row-hover {
-        background: @rust-orange-2;
+        background: @gray-2;
       }
     }
   }
@@ -66,8 +62,6 @@
 
 .ant-table-wrapper:not(.ant-table-has-header) {
   .ant-table-empty {
-    border: none;
-
     .ant-empty-normal {
       margin: 80px 0;
     }
