--- a/analytics-ui/src/styles/index.less
+++ b/analytics-ui/src/styles/index.less
@@ -11,6 +11,7 @@
 @import './components/driver.less';
 @import './components/chart.less';
 @import './components/scrollbar.less';
+@import './components/input.less';
 
 // Layouts
 @import './layouts/global.less';
