refactor(ui): enhance button styles and improve layout consistency across setup components

--- a/analytics-ui/src/styles/index.less
+++ b/analytics-ui/src/styles/index.less
@@ -12,6 +12,7 @@
 @import './components/chart.less';
 @import './components/scrollbar.less';
 @import './components/input.less';
+@import './components/tooltip.less';
 
 // Layouts
 @import './layouts/global.less';
